# cucumber-cpp-ng

./: .gitignore  CMakeLists.txt  README.md  TODO.md
glue-examples/: example1.cpp  example2.c
include/: Plugin.hpp  PluginRegistration.hpp  WirePlugin.hpp  engine.hpp  extensions.hpp
include/glue/: manager.hpp  registration.h
include/plugins/: PluginManager.hpp  plugins.hpp
src/: Plugin.cpp  SomePlugin.cpp  WirePlugin.cpp  engine.cpp  extensions.cpp  main.cpp
src/glue/: manager.cpp  registration.cpp
src/plugins/: PluginManager.cpp  SomePlugin.cpp  WirePlugin.cpp  plugins.cpp
